fix layout overflow in socials

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,12 +25,6 @@ ul.people li{display:inline-block;margin-right:2em;width:45%}
 // ul.people li{margin-right:2em;text-align:left;}
 ul.people li img{width:100px;height:100px;border-radius:10px;margin:10px auto}
 
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
-
 /* collage positions */
 .collage {
 	margin-top: 70px;
